Correct file name of portrait to make it visible

--- a/debbojangles.css
+++ b/debbojangles.css
@@ -303,7 +303,7 @@ html {
     flex-wrap: wrap;
     height: 241.5px;
     width: 201.5px;
-    background-image: url("./img/DSC_0814small.JPG");
+    background-image: url("./img/DSC_0814small.jpg");
     border: 10px solid lemonchiffon;
 }
 
